--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750160124450"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750160124450">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750162214649"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750162214649">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -55,7 +55,7 @@
 											<a href="#" class="menu__link">Праздники для детей</a>
 											<div class="menu__trigger">
 												<svg class="menu__svg">
-													<use xlink:href="./assets/img/spritemap.svg__5e4a9a20#sprite-triangle"></use>
+													<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
 												</svg>
 											</div>
 										</div>
@@ -87,7 +87,7 @@
 											<a href="#" class="menu__link">Праздники для взрослых</a>
 											<div class="menu__trigger">
 												<svg class="menu__svg">
-													<use xlink:href="./assets/img/spritemap.svg__5e4a9a20#sprite-triangle"></use>
+													<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
 												</svg>
 											</div>
 										</div>
@@ -116,7 +116,7 @@
 											<a href="#" class="menu__link">Сценарии и шоу</a>
 											<div class="menu__trigger">
 												<svg class="menu__svg">
-													<use xlink:href="./assets/img/spritemap.svg__5e4a9a20#sprite-triangle"></use>
+													<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
 												</svg>
 											</div>
 										</div>
@@ -149,7 +149,7 @@
 											<a href="#" class="menu__link">О нас</a>
 											<div class="menu__trigger">
 												<svg class="menu__svg">
-													<use xlink:href="./assets/img/spritemap.svg__5e4a9a20#sprite-triangle"></use>
+													<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
 												</svg>
 											</div>
 										</div>
@@ -278,7 +278,7 @@
 								<a href="#" class="menu__link">Праздники для детей</a>
 								<div class="menu__trigger">
 									<svg class="menu__svg">
-										<use xlink:href="./assets/img/spritemap.svg__5e4a9a20#sprite-triangle"></use>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
 									</svg>
 								</div>
 							</div>
@@ -310,7 +310,7 @@
 								<a href="#" class="menu__link">Праздники для взрослых</a>
 								<div class="menu__trigger">
 									<svg class="menu__svg">
-										<use xlink:href="./assets/img/spritemap.svg__5e4a9a20#sprite-triangle"></use>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
 									</svg>
 								</div>
 							</div>
@@ -339,7 +339,7 @@
 								<a href="#" class="menu__link">Сценарии и шоу</a>
 								<div class="menu__trigger">
 									<svg class="menu__svg">
-										<use xlink:href="./assets/img/spritemap.svg__5e4a9a20#sprite-triangle"></use>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
 									</svg>
 								</div>
 							</div>
@@ -372,7 +372,7 @@
 								<a href="#" class="menu__link">О нас</a>
 								<div class="menu__trigger">
 									<svg class="menu__svg">
-										<use xlink:href="./assets/img/spritemap.svg__5e4a9a20#sprite-triangle"></use>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-triangle"></use>
 									</svg>
 								</div>
 							</div>
