--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750162214649"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750162214649">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750186094545"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750186094545">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -246,7 +246,7 @@
 									Сценарии и шоу от которых мамы плачут от радости, коллеги обсуждают у кулера еще месяц, а взрослые заливают
           друг друга шампанским
 								</p>
-								<button class="banner__button">
+								<button class="button" data-fls-custombutton="">
 									<span></span>
 									Стоимость праздника за 1 минуту
 								</button>
@@ -261,6 +261,185 @@
 							<span class="marquee__word">Настроение</span>
 							<span class="marquee__word">Отдых</span>
 							<span class="marquee__word">Реальные эмоции</span>
+						</div>
+					</div>
+				</section>
+				<section class="block" id="expectation">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<div class="block-head__picture block-head__picture_left">
+									<svg>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-arrow1"></use>
+									</svg>
+								</div>
+								<h1 class="block-head__title">Чего Вы хотите от праздника на самом деле?</h1>
+								<div class="block-head__description substrate substrate_orange substrate_left">Оживим вашу мечту, просто выберите:</div>
+							</div>
+							<div class="block-body">
+								<div class="block-body__content" data-fls-blockcontent="" data-fls-grid="">
+									<div class="icons icons_right" data-fls-icons="">
+										<svg class="icons__svg icons__svg_blue">
+											<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+										</svg>
+									</div>
+									<div class="block-body__item" data-fls-grid-col="7" data-fls-grid-row="1" data-fls-grid-col-tablet="12">
+										<div class="block-body__picture">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img1-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img1-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/expectation/img1.webp">
+											</picture>
+										</div>
+										<div class="block-body__text block-body__text_row">
+											<button class="button button_orange" data-fls-custombutton="">
+												<span></span>
+												Хочу этот взгляд и улыбку
+											</button>
+											<p class="block-body__description substrate substrate_blue substrate_deep-left">
+												Мама, это был мой самый лучший день!
+												<span class="block-body__smile">
+													<img src="./assets/img/smiles/smile2.svg" alt="smile">
+												</span>
+											</p>
+										</div>
+									</div>
+									<div class="block-body__item" data-fls-grid-row="2" data-fls-grid-col="5" data-fls-grid-col-tablet="12">
+										<div class="block-body__picture">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img2-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img2-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/expectation/img2.webp">
+											</picture>
+										</div>
+										<div class="block-body__text block-body__text_column">
+											<button class="button button_purple" data-fls-custombutton="">
+												<span></span>
+												Получить овации и премию
+											</button>
+											<p class="block-body__description substrate substrate_purple substrate_deep-right">
+												Кто это организовал — дайте ему премию
+												<span class="block-body__smile">
+													<img src="./assets/img/smiles/smile1.svg" alt="smile">
+												</span>
+											</p>
+										</div>
+									</div>
+									<div class="block-body__item" data-fls-grid-row="3" data-fls-grid-col="12" data-fls-grid-col-tablet="12">
+										<div class="block-body__picture">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img3-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img3-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/expectation/img3.webp">
+											</picture>
+										</div>
+										<div class="block-body__text block-body__text_row">
+											<button class="button button_purple" data-fls-custombutton="">
+												<span></span>
+												Вечер, о котором друзья будут говорить еще долго
+											</button>
+											<p class="block-body__description substrate substrate_purple substrate_deep-right">
+												Гэтсби бы позавидовал. Гай Ричи снял бы про это фильм
+												<span class="block-body__smile">
+													<img src="./assets/img/smiles/fire.svg" alt="smile">
+												</span>
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block" id="organization">
+					<div class="block__img">
+						<img src="./assets/img/svg/line.svg" alt="image">
+					</div>
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<div class="block-head__picture block-head__picture_right">
+									<svg>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-arrow1"></use>
+									</svg>
+								</div>
+								<h1 class="block-head__title">Какие праздники мы организуем: детские, взрослые, корпоративные</h1>
+								<div class="block-head__description substrate substrate_green substrate_">
+									Мамы плачут на наших праздниках от счастья, бухгалтеры – танцуют, а скука получает бан
+								</div>
+							</div>
+							<div class="block-body">
+								<div class="block-body__content" data-fls-blockcontent="" data-fls-grid="">
+									<div class="icons icons_right" data-fls-icons="">
+										<svg class="icons__svg icons__svg_blue">
+											<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+										</svg>
+									</div>
+									<div class="block-body__item" data-fls-grid-col="4" data-fls-grid-row="2" data-fls-grid-col-tablet="12">
+										<div class="block-body__picture">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/organize/img1-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/organize/img1-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/organize/img1.webp">
+											</picture>
+										</div>
+										<div class="block-body__text block-body__text_column">
+											<button class="button button_blue" data-fls-custombutton="">
+												<span></span>
+												Детские праздники
+											</button>
+											<p class="block-body__description substrate substrate_green substrate_deep-right">
+												Мама, это был мой самый лучший день!
+												<span class="block-body__smile">
+													<img src="./assets/img/smiles/smile4.svg" alt="smile">
+												</span>
+											</p>
+										</div>
+									</div>
+									<div class="block-body__item" data-fls-grid-row="" data-fls-grid-col="8" data-fls-grid-col-tablet="12">
+										<div class="block-body__picture">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/organize/img2-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/organize/img2-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/organize/img2.webp">
+											</picture>
+										</div>
+										<div class="block-body__text block-body__text_row">
+											<button class="button button_blue" data-fls-custombutton="">
+												<span></span>
+												Праздники для взрослых
+											</button>
+											<p class="block-body__description substrate substrate_orange substrate_deep-left">
+												Кто это организовал — дайте ему премию
+												<span class="block-body__smile">
+													<img src="./assets/img/smiles/fire.svg" alt="smile">
+												</span>
+											</p>
+										</div>
+									</div>
+									<div class="block-body__item" data-fls-grid-row="" data-fls-grid-col="8" data-fls-grid-col-tablet="12">
+										<div class="block-body__picture">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/organize/img3-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/organize/img3-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/organize/img3.webp">
+											</picture>
+										</div>
+										<div class="block-body__text block-body__text_row">
+											<button class="button button_blue" data-fls-custombutton="">
+												<span></span>
+												Корпоративы и тимбилдинги
+											</button>
+											<p class="block-body__description substrate substrate_green substrate_deep-right">
+												Гэтсби бы позавидовал. Гай Ричи снял бы про это фильм
+												<span class="block-body__smile">
+													<img src="./assets/img/smiles/cacke.svg" alt="smile">
+												</span>
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
