--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750187478542"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750187478542">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750188285320"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750188285320">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -38,9 +38,7 @@
 						<div class="header__logo">
 							<div class="logo" data-fls-logo="">
 								<a href="/" class="logo__link">
-									<picture>
-										<img alt="Logo" class="logo__img" src="./assets/img/logo/logo.webp">
-									</picture>
+									<img src="./assets/img/logo/logo.png" alt="Logo" class="logo__img">
 								</a>
 							</div>
 						</div>
@@ -200,40 +198,22 @@
 					<div class="banner__wrapper">
 						<div class="banner__photos">
 							<div class="banner__photo">
-								<picture>
-									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img1-600.webp" type="image/webp">
-									<img alt="Image" src="./assets/img/sectionBanner/img1.webp">
-								</picture>
+								<img src="./assets/img/sectionBanner/img1.png" alt="Image">
 							</div>
 							<div class="banner__photo">
-								<picture>
-									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img2-600.webp" type="image/webp">
-									<img alt="Image" src="./assets/img/sectionBanner/img2.webp">
-								</picture>
+								<img src="./assets/img/sectionBanner/img2.png" alt="Image">
 							</div>
 							<div class="banner__photo">
-								<picture>
-									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img3-600.webp" type="image/webp">
-									<img alt="Image" src="./assets/img/sectionBanner/img3.webp">
-								</picture>
+								<img src="./assets/img/sectionBanner/img3.png" alt="Image">
 							</div>
 							<div class="banner__photo">
-								<picture>
-									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img4-600.webp" type="image/webp">
-									<img alt="Image" src="./assets/img/sectionBanner/img4.webp">
-								</picture>
+								<img src="./assets/img/sectionBanner/img4.png" alt="Image">
 							</div>
 							<div class="banner__photo">
-								<picture>
-									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img5-600.webp" type="image/webp">
-									<img alt="Image" src="./assets/img/sectionBanner/img5.webp">
-								</picture>
+								<img src="./assets/img/sectionBanner/img5.png" alt="Image">
 							</div>
 							<div class="banner__photo">
-								<picture>
-									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img6-600.webp" type="image/webp">
-									<img alt="Image" src="./assets/img/sectionBanner/img6.webp">
-								</picture>
+								<img src="./assets/img/sectionBanner/img6.png" alt="Image">
 							</div>
 						</div>
 						<div class="banner__container">
@@ -285,11 +265,7 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-col="7" data-fls-grid-row="1" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<picture>
-												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img1-600.webp" type="image/webp">
-												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img1-1200.webp" type="image/webp">
-												<img alt="image" src="./assets/img/expectation/img1.webp">
-											</picture>
+											<img src="./assets/img/expectation/img1.jpg" alt="image">
 										</div>
 										<div class="block-body__text block-body__text_row">
 											<button class="button button_orange" data-fls-custombutton="">
@@ -306,11 +282,7 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-row="2" data-fls-grid-col="5" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<picture>
-												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img2-600.webp" type="image/webp">
-												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img2-1200.webp" type="image/webp">
-												<img alt="image" src="./assets/img/expectation/img2.webp">
-											</picture>
+											<img src="./assets/img/expectation/img2.jpg" alt="image">
 										</div>
 										<div class="block-body__text block-body__text_column">
 											<button class="button button_purple" data-fls-custombutton="">
@@ -327,11 +299,7 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-row="3" data-fls-grid-col="12" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<picture>
-												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img3-600.webp" type="image/webp">
-												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img3-1200.webp" type="image/webp">
-												<img alt="image" src="./assets/img/expectation/img3.webp">
-											</picture>
+											<img src="./assets/img/expectation/img3.jpg" alt="image">
 										</div>
 										<div class="block-body__text block-body__text_row">
 											<button class="button button_purple" data-fls-custombutton="">
@@ -377,11 +345,7 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-col="4" data-fls-grid-row="2" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<picture>
-												<source media="(max-width: 600px)" srcset="./assets/img/organize/img1-600.webp" type="image/webp">
-												<source media="(max-width: 1200px)" srcset="./assets/img/organize/img1-1200.webp" type="image/webp">
-												<img alt="image" src="./assets/img/organize/img1.webp">
-											</picture>
+											<img src="./assets/img/organization/image1.jpg" alt="image">
 										</div>
 										<div class="block-body__text block-body__text_column">
 											<button class="button button_blue" data-fls-custombutton="">
@@ -398,11 +362,7 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-row="" data-fls-grid-col="8" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<picture>
-												<source media="(max-width: 600px)" srcset="./assets/img/organize/img2-600.webp" type="image/webp">
-												<source media="(max-width: 1200px)" srcset="./assets/img/organize/img2-1200.webp" type="image/webp">
-												<img alt="image" src="./assets/img/organize/img2.webp">
-											</picture>
+											<img src="./assets/img/organization/image2.jpg" alt="image">
 										</div>
 										<div class="block-body__text block-body__text_row">
 											<button class="button button_blue" data-fls-custombutton="">
@@ -419,11 +379,7 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-row="" data-fls-grid-col="8" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<picture>
-												<source media="(max-width: 600px)" srcset="./assets/img/organize/img3-600.webp" type="image/webp">
-												<source media="(max-width: 1200px)" srcset="./assets/img/organize/img3-1200.webp" type="image/webp">
-												<img alt="image" src="./assets/img/organize/img3.webp">
-											</picture>
+											<img src="./assets/img/organization/image3.jpg" alt="image">
 										</div>
 										<div class="block-body__text block-body__text_row">
 											<button class="button button_blue" data-fls-custombutton="">
