--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750188285320"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750188285320">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750188724477"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750188724477">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -38,7 +38,9 @@
 						<div class="header__logo">
 							<div class="logo" data-fls-logo="">
 								<a href="/" class="logo__link">
-									<img src="./assets/img/logo/logo.png" alt="Logo" class="logo__img">
+									<picture>
+										<img alt="Logo" class="logo__img" src="./assets/img/logo/logo.webp">
+									</picture>
 								</a>
 							</div>
 						</div>
@@ -198,22 +200,40 @@
 					<div class="banner__wrapper">
 						<div class="banner__photos">
 							<div class="banner__photo">
-								<img src="./assets/img/sectionBanner/img1.png" alt="Image">
+								<picture>
+									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img1-600.webp" type="image/webp">
+									<img alt="Image" src="./assets/img/sectionBanner/img1.webp">
+								</picture>
 							</div>
 							<div class="banner__photo">
-								<img src="./assets/img/sectionBanner/img2.png" alt="Image">
+								<picture>
+									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img2-600.webp" type="image/webp">
+									<img alt="Image" src="./assets/img/sectionBanner/img2.webp">
+								</picture>
 							</div>
 							<div class="banner__photo">
-								<img src="./assets/img/sectionBanner/img3.png" alt="Image">
+								<picture>
+									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img3-600.webp" type="image/webp">
+									<img alt="Image" src="./assets/img/sectionBanner/img3.webp">
+								</picture>
 							</div>
 							<div class="banner__photo">
-								<img src="./assets/img/sectionBanner/img4.png" alt="Image">
+								<picture>
+									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img4-600.webp" type="image/webp">
+									<img alt="Image" src="./assets/img/sectionBanner/img4.webp">
+								</picture>
 							</div>
 							<div class="banner__photo">
-								<img src="./assets/img/sectionBanner/img5.png" alt="Image">
+								<picture>
+									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img5-600.webp" type="image/webp">
+									<img alt="Image" src="./assets/img/sectionBanner/img5.webp">
+								</picture>
 							</div>
 							<div class="banner__photo">
-								<img src="./assets/img/sectionBanner/img6.png" alt="Image">
+								<picture>
+									<source media="(max-width: 600px)" srcset="./assets/img/sectionBanner/img6-600.webp" type="image/webp">
+									<img alt="Image" src="./assets/img/sectionBanner/img6.webp">
+								</picture>
 							</div>
 						</div>
 						<div class="banner__container">
@@ -265,7 +285,11 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-col="7" data-fls-grid-row="1" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<img src="./assets/img/expectation/img1.jpg" alt="image">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img1-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img1-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/expectation/img1.webp">
+											</picture>
 										</div>
 										<div class="block-body__text block-body__text_row">
 											<button class="button button_orange" data-fls-custombutton="">
@@ -282,7 +306,11 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-row="2" data-fls-grid-col="5" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<img src="./assets/img/expectation/img2.jpg" alt="image">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img2-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img2-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/expectation/img2.webp">
+											</picture>
 										</div>
 										<div class="block-body__text block-body__text_column">
 											<button class="button button_purple" data-fls-custombutton="">
@@ -299,7 +327,11 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-row="3" data-fls-grid-col="12" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<img src="./assets/img/expectation/img3.jpg" alt="image">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/expectation/img3-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/expectation/img3-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/expectation/img3.webp">
+											</picture>
 										</div>
 										<div class="block-body__text block-body__text_row">
 											<button class="button button_purple" data-fls-custombutton="">
@@ -345,7 +377,11 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-col="4" data-fls-grid-row="2" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<img src="./assets/img/organization/image1.jpg" alt="image">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/organization/image1-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/organization/image1-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/organization/image1.webp">
+											</picture>
 										</div>
 										<div class="block-body__text block-body__text_column">
 											<button class="button button_blue" data-fls-custombutton="">
@@ -362,7 +398,11 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-row="" data-fls-grid-col="8" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<img src="./assets/img/organization/image2.jpg" alt="image">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/organization/image2-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/organization/image2-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/organization/image2.webp">
+											</picture>
 										</div>
 										<div class="block-body__text block-body__text_row">
 											<button class="button button_blue" data-fls-custombutton="">
@@ -379,7 +419,11 @@
 									</div>
 									<div class="block-body__item" data-fls-grid-row="" data-fls-grid-col="8" data-fls-grid-col-tablet="12">
 										<div class="block-body__picture">
-											<img src="./assets/img/organization/image3.jpg" alt="image">
+											<picture>
+												<source media="(max-width: 600px)" srcset="./assets/img/organization/image3-600.webp" type="image/webp">
+												<source media="(max-width: 1200px)" srcset="./assets/img/organization/image3-1200.webp" type="image/webp">
+												<img alt="image" src="./assets/img/organization/image3.webp">
+											</picture>
 										</div>
 										<div class="block-body__text block-body__text_row">
 											<button class="button button_blue" data-fls-custombutton="">
